# dsmlp-validator

./: .dockerignore  .gitignore  Dockerfile  README.md  pytest.ini  ref.json  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml
src/dsmlp/: admission_controller.py
src/dsmlp/app/: __init__.py  config.py  factory.py  gpu_validator.py  id_validator.py  tritongpt_validator.py  types.py  validator.py
src/dsmlp/ext/: awsed.py  kube.py  logger.py
src/dsmlp/plugin/: awsed.py  console.py  kube.py  logger.py
tests/: admission-review.json  fakes.py  ref.json  test_admission_controller.py
tests/app/: test_gpu_validator.py  test_id_validator.py  test_logs.py  test_tgpt_validator.py  test_validator.py  utils.py
tests/ext/: test_awsed.py  test_kube_client.py
