[metadata]
name = dsmlp-validator
author = David Andersen
version = 0.0.1
description = DSMLP Validator

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6

[options.packages.find]
where=src

[options.extras_require]
test =
    PyHamcrest==2.0.4
    pytest==6.2.5
    requests-mock==1.9.3
