[metadata]
name = dsmlp-validator
author = David Andersen
version = 2023.3.1-RC1
description = DSMLP Validator

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.9

[options.packages.find]
where=src

[options.extras_require]
test =
    PyHamcrest
    pytest
    requests-mock
    tox
    openapi-python-client
